<resources>
    <string name="app_name">RD4800</string>
    <!--存放采集到的扩增数据的文件-->
    <string name="ampData">amp_data</string>
    <!--存放采集到的溶解数据的文件-->
    <string name="disData">dissolution_data</string>
    <!--存放默认保存实验结果的文件-->
    <string name="amplification">amplification</string>
    <string name="fileBtn">文件</string>
    <string name="settingBtn">设置</string>
    <string name="graphBtn">曲线</string>
    <string name="resultBtn">结果</string>
    <string name="toolBtn">工具</string>
    <string name="newFile">新建</string>
    <string name="fileName">文件名</string>
    <string name="sureBtn">确定</string>
    <string name="cancelBtn">取消</string>
    <string name="openFile">打开</string>
    <string name="saveFile">另存</string>
    <string name="increaseGraph">扩增曲线</string>
    <string name="decreaseGraph">溶解曲线</string>
    <string name="runBtn">运行</string>
    <string name="stopBtn">停止</string>
    <string name="result_holePosition">孔位</string>
    <string name="result_code">条码</string>
    <string name="result_name">姓名</string>
    <string name="result_sex">性别</string>
    <string name="result_age">年龄</string>
    <string name="result_project">项目</string>
    <string name="result_dt">dt值</string>
    <string name="result_result">结果</string>
    <string name="result_remark">备注</string>
    <string name="exportExcel">导出</string>
    <string name="deleteExcel">删除</string>
    <string name="clearExcel">清空</string>
    <string name="sdCard">SD卡</string>
    <string name="uPan">U盘</string>
    <string name="positiveVal">阳性</string>
    <string name="negativeVal">阴性</string>
    <string name="web_http">http://192.168.0.102:8080/RD4800</string>
    <string name="test_http">http://www.weather.com.cn/data/sk/101010100.html</string>
</resources>
