<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/exportExcel"
            android:background="@drawable/btn_style"
            android:layout_marginRight="10dp"
            android:id="@+id/exportExcel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/deleteExcel"
            android:background="@drawable/btn_style"
            android:layout_marginRight="10dp"
            android:id="@+id/deleteExcel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/clearExcel"
            android:background="@drawable/btn_style"
            android:layout_marginRight="10dp"
            android:id="@+id/clearExcel"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/cannotClick"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdCard"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uPan"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/localFiles">

            </ListView>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/outFiles">

            </ListView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>