<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:baselineAligned="false"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/increaseGraph"
                android:background="@drawable/btn_style"
                android:id="@+id/increaseBtn"
                android:layout_marginRight="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/decreaseGraph"
                android:background="@drawable/btn_style"
                android:id="@+id/decreaseBtn"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:textColor="@color/cannotClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/runBtn"
                android:background="@drawable/btn_style"
                android:id="@+id/startRecordData"
                android:layout_marginRight="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/stopBtn"
                android:background="@drawable/btn_style"
                android:id="@+id/stopRecordData"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:textColor="@color/cannotClick"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/mainChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="这里是孔板区"/>
        </LinearLayout>

    </LinearLayout>
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/testUsePara"/>-->

</LinearLayout>